style: avoid logo input collision on safari mobile

--- a/src/core/components/ChatView.module.css
+++ b/src/core/components/ChatView.module.css
@@ -34,6 +34,10 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+
+  @media (max-width: 768px) {
+    margin-top: -160px;
+  }
 }
 
 #start {
